--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/google.maps": "^3.55.11",
     "@types/js-cookie": "^3.0.6",
+    "@types/mapbox-gl": "^3.1.0",
     "js-cookie": "^3.0.5",
+    "mapbox-gl": "^3.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0"
   },
