--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "react-spinners": "^0.14.1",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
